# morfAnalytics

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  ROADMAP.md  service.json
cache/: meteohub-cache.sqlite-shm  meteohub-cache.sqlite-wal
config/: morfanalytics.example.json  morfanalytics.json
docs/en/: README.md
docs/fr/: ARCHITECTURE.md  DECISIONS.md  README.md
examples/minimal/: CMakeLists.txt  main.cpp
include/morfanalytics/: AnalyticsModule.h  HttpServer.h  IModule.h  ModuleFactory.h  ModuleRegistry.h  Service.h  ServiceConfig.h  Version.h
include/morfanalytics/analysis/: AnalysisRegistry.h  IAnalysis.h  MeteoMath.h
include/morfanalytics/collect/: MeteoHubCollector.h
include/morfanalytics/data/: SampleStore.h  Series.h
scripts/: new-service.ps1  new-service.sh  sync-morf.ps1  sync-morf.sh
scripts/linux/: install-service.sh  morfanalytics.service  uninstall-service.sh  update-service.sh
scripts/windows/: install-service.ps1  uninstall-service.ps1
service/: CMakeLists.txt  main.cpp
src/: AnalyticsModule.cpp  HttpServer.cpp  ModuleFactory.cpp  ModuleRegistry.cpp  Service.cpp
src/analysis/: AnalysisRegistry.cpp  MeteoAnalyses.cpp  MeteoMath.cpp
src/collect/: MeteoHubCollector.cpp
src/data/: SampleStore.cpp
